# ToneCascade

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Tone-Cascade.jucer
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: JuceIncludes.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Core/: EditorInterface.h  Parameters.h  PluginProcessor.cpp  PluginProcessor.h
Source/Tests/: CMakeLists.txt
Source/Tests/core/: CMakeLists.txt
Source/Tests/core/audio/: AudioPassthroughTest.cpp
Source/UI/: PluginEditor.cpp  PluginEditor.h
Tests/TestCore/: PassthroughTest.cpp
cmake/: TestHelpers.cmake
cmake-build/: ALL_BUILD.vcxproj  ToneCascade.sln  ToneCascade.vcxproj  ToneCascade_All.vcxproj  ToneCascade_Standalone.vcxproj  ToneCascade_VST3.vcxproj  ToneCascade_rc_lib.vcxproj  ZERO_CHECK.vcxproj  juce_vst3_helper.vcxproj
cmake-build/ToneCascade_artefacts/JuceLibraryCode/: Info.txt
cmake-build/ToneCascade_artefacts/JuceLibraryCode/Debug/: Defs.txt
cmake-build/ToneCascade_artefacts/JuceLibraryCode/MinSizeRel/: Defs.txt
docs/: LEARNINGS.md  intro.md
